# CausalDiscoveryAgent

./: .gitignore  README.md  main.py  pyproject.toml
demo/data/: data.csv  data_introduce_en.md  data_introduce_zh.md
demo/data/raw/: convert_data_to_csv.py
src/: __init__.py
src/agent/: LLMClient.py
src/causal_discovery/wrappers/: __init__.py  base_model.py  pc.py
src/core/: __init__.py  algorithm_selector.py  executor.py  initializer.py  state.py
src/llm/: LLMClient.py  __init__.py
src/llm/agents/: __init__.py  algorithm_ranker.py  algorithm_selector.py  knowledge_info.py
src/utils/: __init__.py  data_check.py  data_preprocess.py
