[project]
name = "causaldiscoveryagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "causal-learn>=0.1.4.3",
    "dotenv>=0.9.9",
    "openai>=1.108.0",
    "pandas>=2.3.2",
    "pydantic>=2.11.9",
    "scikit-learn>=1.7.2",
    "streamlit>=1.49.1",
    "torch>=2.8.0",
]
